Add base abstractions for config, http api and persistence

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
+*.class
+*.log
+
+# sbt specific
+.cache
+.history
+.lib/
+dist/*
 target/
-/.idea/
+codegen/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# IntelliJ
+.idea/
+
+.DS_Store
