Add docker and config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,9 +18,9 @@ zio.cats.backend {
   }
 
   db-config {
-    url = "url"
+    url = "jdbc:postgresql://postgres:5432/user
     user = "user"
-    password = "password"
+    password = "test123"
   }
 
 }
