Better error handling and start up

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,9 +18,14 @@ zio.cats.backend {
   }
 
   db-config {
-    url = "jdbc:postgresql://postgres:5432/user
+    url = "jdbc:postgresql://localhost:5432/user"
     user = "user"
     password = "test123"
+  }
+
+  req-res-client {
+    host : "reqres.in"
+    port : 80
   }
 
 }
