--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,14 +18,23 @@ zio.cats.backend {
   }
 
   db-config {
+    class-name = "org.postgresql.Driver"
+
     url = "jdbc:postgresql://localhost:5432/user"
+    url = ${?DB_URL}
+
     user = "user"
+    user = ${?DB_USER}
+
     password = "test123"
+    password = ${?DB_PASSWORD}
+
   }
 
   req-res-client {
+    protocol : "https"
     host : "reqres.in"
-    port : 80
+    port : 443
   }
 
 }
